--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/Shopify/skeleton-theme.git"
   },
   "devDependencies": {
-    "@shopify/slate-tools": ">=1.0.0-alpha.29"
+    "@shopify/slate-tools": ">=1.0.0-beta.1"
   },
   "scripts": {
     "start": "slate-tools start",
