--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0-alpha.1",
   "private": true,
   "author": "Shopify Inc.",
-  "description":
-    "A barebones, Slate compatible, starting point for developing Shopify themes.",
-  "keywords": ["shopify", "theme"],
+  "description": "A barebones, Slate compatible, starting point for developing Shopify themes.",
+  "keywords": [
+    "shopify",
+    "theme"
+  ],
   "bugs": "https://github.com/Shopify/skeleton-theme/issues",
   "license": "MIT",
   "repository": {
@@ -13,7 +15,7 @@
     "url": "https://github.com/Shopify/skeleton-theme.git"
   },
   "devDependencies": {
-    "@shopify/slate-tools": ">=1.0.0-beta.1"
+    "@shopify/slate-tools": ">=1.0.0-beta.2"
   },
   "scripts": {
     "start": "slate-tools start",
