--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,5 +8,26 @@
  * ------------------------------------------------------------
  */
 {
-  "current": {}
+  "current": {
+    "sections": {
+      "header": {
+        "type": "header",
+        "settings": {
+          "logo": "shopify://shop_images/ChatGPT_Image_11_._2025_._08_36_56.png",
+          "brand_name": "LOOKS MAX",
+          "tagline": "PURIFY. BALANCE. GLOW.",
+          "menu": "main-menu",
+          "show_search": false,
+          "show_cart": true,
+          "background_color": "#0a0a1a",
+          "text_color": "#ffffff"
+        }
+      },
+      "footer": {
+        "type": "footer",
+        "settings": {}
+      }
+    },
+    "content_for_index": []
+  }
 }
